# portfolio-website

./: .gitignore  LICENSE  README.md
backend/: .env.local  pyproject.toml  requirements.txt  vercel.json
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolio/: settings.py
frontend/: .env  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: portfolio.ts
frontend/src/assets/: main.css
frontend/src/component/: PageBackground.vue
frontend/src/component/BlurText/: BlurText.vue
frontend/src/component/BorderGlow/: BorderGlow.vue
frontend/src/component/ClickSpark/: ClickSpark.vue
frontend/src/component/CountUp/: CountUp.vue
frontend/src/component/FadeContent/: FadeContent.vue
frontend/src/component/RotatingText/: RotatingText.vue
frontend/src/component/StarBorder/: StarBorder.vue
frontend/src/component/TiltedCard/: TiltedCard.vue
frontend/src/composables/: useAboutWidgets.ts  usePortfolio.ts
frontend/src/pages/: 404Page.vue  AboutPage.vue  ConnectPage.vue  ExperiencePage.vue  LandingPage.vue  ProjectsPage.vue
frontend/src/router/: index.ts
frontend/src/types/: portfolio.ts
