[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-distill>=3.2.7",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
    "whitenoise>=6.12.0",
]
